--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -65,3 +65,17 @@
         width: 30px;
     }
 }
+@media(max-width: 1024px){
+    main .cards {
+        display: grid;
+    
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media(max-width: 700px){
+    main .cards {
+        display: grid;
+    
+        grid-template-columns: 1fr;
+    }
+}
